[metadata]
name = marshal
version = 0.0.1
summary = OpenStack Marshal
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    marshal_agent

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = marshal/locale
domain = marshal

[update_catalog]
domain = marshal
output_dir = marshal/locale
input_file = marshal/locale/marshal.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = marshal/locale/marshal.pot

data_files =
    etc/marshal =
        etc/marshal/marshal.conf
scripts =
    bin/marshal.sh

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    marshal = marshal_agent.agent.marshal:agent_main

[wheel]
universal = 1
