[metadata]
name = marshal
version = 0.0.1
summary = OpenStack Marshal
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    marshal_agent
data_files =
    etc/marshal =
        etc/marshal/marshal.conf
scripts =
	bin/marshal.sh

[global]
setup-hooks =
	pbr.hooks.setup_hook

[entry_points]
console_scripts =
	marshal = marshal_agent.agent.marshal:agent_main

[wheel]
universal = 1
